--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.61_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.61_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn56.61:0.1": "Verbundene Lehrreden 56 ",
-  "sn56.61:0.2": "7. Abgekürzte Texte über rohes Getreide "
+  "sn56.61:0.2": "7. Abgekürzte Texte über rohes Getreide ",
+  "sn56.61:0.3": "61. Nicht als Mensch "
 }
