--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -691,7 +691,7 @@
   "sn-name:2063.sn56.58": "Das Weltmeer (2) ",
   "sn-name:2064.sn56.59": "Ein Berg (1) ",
   "sn-name:2065.sn56.60": "Ein Berg (2) ",
-  "sn-name:2066.sn56-pathamaamakadhannapeyyalavagga": "Abgekürzte Texte über rohes Getreide ",
+  "sn-name:2066.sn56-pathamaamakadhannapeyyalavagga": "Abgekürzte Texte über rohes Getreide (1) ",
   "sn-name:2067.sn56.61": "Nicht als Mensch ",
   "sn-name:2077.sn56-dutiyaamakadhannapeyyalavagga": "Abgekürzte Texte über rohes Getreide (2) ",
   "sn-name:2078.sn56.71": "Lebende Geschöpfe töten ",
