Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn56/sn56.61_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.61_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.61_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn56.61:1.4": "„Herr, die große Erde ist sicherlich mehr. Das bisschen Erde unter deinem Fingernagel ist winzig. ",
   "sn56.61:1.5": "Verglichen mit der großen Erde zählt es nicht, da ist kein Vergleich, es ist nicht einen Bruchteil wert.“ ",
   "sn56.61:2.1": "„Ebenso werden wenige Lebewesen, die als Menschen sterben, als Menschen wiedergeboren; viele hingegen, die als Menschen sterben, werden nicht als Menschen wiedergeboren. ",
-  "sn56.61:2.2": "Und warum? "
+  "sn56.61:2.2": "Und warum? ",
+  "sn56.61:2.3": "Weil sie die vier edlen Wahrheiten nicht gesehen haben. "
 }
