--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.61_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.61_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "sn56.61:2.1": "„Ebenso werden wenige Lebewesen, die als Menschen sterben, als Menschen wiedergeboren; viele hingegen, die als Menschen sterben, werden nicht als Menschen wiedergeboren. ",
   "sn56.61:2.2": "Und warum? ",
   "sn56.61:2.3": "Weil sie die vier edlen Wahrheiten nicht gesehen haben. ",
-  "sn56.61:2.4": "Welche vier? "
+  "sn56.61:2.4": "Welche vier? ",
+  "sn56.61:2.5": "Die edlen Wahrheiten vom Leiden, vom Ursprung des Leidens, vom Aufhören des Leidens und von der Übung, die zum Aufhören des Leidens führt. "
 }
