--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -693,6 +693,7 @@
   "sn-name:2065.sn56.60": "Ein Berg (2) ",
   "sn-name:2066.sn56-pathamaamakadhannapeyyalavagga": "Abgekürzte Texte über rohes Getreide (1) ",
   "sn-name:2067.sn56.61": "Nicht als Menschen ",
+  "sn-name:2068.sn56.62": "In Grenzgebieten ",
   "sn-name:2077.sn56-dutiyaamakadhannapeyyalavagga": "Abgekürzte Texte über rohes Getreide (2) ",
   "sn-name:2078.sn56.71": "Lebende Geschöpfe töten ",
   "sn-name:2079.sn56.72": "Stehlen ",
