--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.64_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.64_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
   "sn56.64:0.1": "Verbundene Lehrreden 56 ",
   "sn56.64:0.2": "7. Abgekürzte Texte über rohes Getreide (1) ",
-  "sn56.64:0.3": "64. Alkohol und Drogen "
+  "sn56.64:0.3": "64. Alkohol trinken "
 }
