Translations by trush23 to translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -298,5 +298,5 @@
   "mn1:171.2": "પરંતુ પૃથ્વીને પ્રત્યક્ષ રીતે પૃથ્વી તરીકે જાણી તેઓ પોતાને પૃથ્વી નથી માનતા, પોતાને પૃથ્વીમાં નથી માનતા, પોતાને પૃથ્વીથી નથી માનતા, પૃથ્વી મારી છે એવું નથી માનતા, પૃથ્વીમાં આનંદ નથી લેતા.",
   "mn1:171.3": "એ શેના માટે?",
   "mn1:171.4": "આનંદ માંણવાની વૃત્તી દુખનું મૂળ છે—",
-  "mn1:171.5": "અને અસ્તિત્વના કારણે જન્મ થાય છે અને જન્મ"
+  "mn1:171.5": "અને અસ્તિત્વના કારણે જન્મ થાય છે અને જે જન્મેલા છે તેમને વયવૃધ્ધિ અને મૃત્યુનો અનુભવ થાય છે.  "
 }
