Translations by trush23 to translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -299,5 +299,6 @@
   "mn1:171.3": "એ શેના માટે?",
   "mn1:171.4": "આનંદ માંણવાની વૃત્તી દુખનું મૂળ છે—",
   "mn1:171.5": "અને અસ્તિત્વના કારણે જન્મ થાય છે અને જે જન્મેલા છે તેમને વયવૃધ્ધિ અને મૃત્યુનો અનુભવ થાય છે.  ",
-  "mn1:171.6": "આ કારણે, ભક્ષુઓ, ‘લાલસાના સંપૂર્ણ વિનાશ, વૈરાગ્ય, નિરોધ, ત્યાગ, અને છોડી દેવાને લીધે, તથાગત સર્વશ્રેષ્ઠ સંપ્રબોધનમાં જાગૃત થયા છે, કહું છું."
+  "mn1:171.6": "આ કારણે, ભક્ષુઓ, ‘લાલસાના સંપૂર્ણ વિનાશ, વૈરાગ્ય, નિરોધ, ત્યાગ, અને છોડી દેવાને લીધે, તથાગત સર્વશ્રેષ્ઠ સંપ્રબોધનમાં જાગૃત થયા છે, કહું છું.",
+  "mn1:172-194.1": "પાણીને પાણી …"
 }
