--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -318,5 +318,6 @@
   "mn1:172-194.16": "જોએલાને જોએલું …",
   "mn1:172-194.17": "સાંભળ્યાને સાંભળ્યુ …",
   "mn1:172-194.18": "ખ્યાલ કરેલાને ખ્યાલ કરેલુ …",
-  "mn1:172-194.19": "જાણેલાને જાણેલુ …"
+  "mn1:172-194.19": "જાણેલાને જાણેલુ …",
+  "mn1:172-194.20": "એકતાને એકતા …"
 }
