Translations by trush23 to translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -326,5 +326,6 @@
   "mn1:172-194.24": "પરંતુ નિર્વાણને પ્રત્યક્ષ રીતે નિર્વાણ તરીકે જાણી તેઓ પોતાને નિર્વાણ નથી માનતા, પોતાને નિર્વાણમાં નથી માનતા, પોતાને નિર્વાણથી નથી માનતા, નિર્વાણ મારું છે એવું નથી માનતા, નિર્વાણમાં આનંદ નથી લેતા.",
   "mn1:172-194.25": "એ શેના માટે?",
   "mn1:172-194.26": "આનંદ માંણવાની વૃત્તી દુખનું મૂળ છે—",
-  "mn1:172-194.27": "અને અસ્તિત્વના કારણે જન્મ થાય છે અને જે જન્મેલા છે તેમને વયવૃધ્ધિ અને મૃત્યુનો અનુભવ થાય છે."
+  "mn1:172-194.27": "અને અસ્તિત્વના કારણે જન્મ થાય છે અને જે જન્મેલા છે તેમને વયવૃધ્ધિ અને મૃત્યુનો અનુભવ થાય છે.",
+  "mn1:172-194.28": "આ કારણે, ભક્ષુઓ, ‘લાલસાના સંપૂર્ણ વિનાશ, વૈરાગ્ય, નિરોધ, ત્યાગ, અને છોડી દેવાને લીધે, તથાગત સર્વશ્રેષ્ઠ સંપ્રબોધનમાં જાગૃત થયા છે’, કહું છું."
 }
