Translations by trush23 to translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -330,5 +330,6 @@
   "mn1:172-194.28": "આ કારણે, ભક્ષુઓ, ‘લાલસાના સંપૂર્ણ વિનાશ, વૈરાગ્ય, નિરોધ, ત્યાગ, અને છોડી દેવાને લીધે, તથાગત સર્વશ્રેષ્ઠ સંપ્રબોધનમાં જાગૃત થયા છે’, કહું છું”.",
   "mn1:172-194.29": "તથાગતની પૂર્ણતા",
   "mn1:172-194.30": "ભગવન્તે એવુ કહ્યું.",
-  "mn1:172-194.31": "પણ એ ભિક્ષુઓને ભગવંતના શબ્દો ના ગમ્યા. "
+  "mn1:172-194.31": "પણ એ ભિક્ષુઓને ભગવંતના શબ્દો ના ગમ્યા. ",
+  "mn1:172-194.32": "મૂળપરિયાય સૂત્ર"
 }
