--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.65_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.65_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn56.65:0.1": "Verbundene Lehrreden 56 ",
-  "sn56.65:0.2": "7. Abgekürzte Texte über rohes Getreide (1) "
+  "sn56.65:0.2": "7. Abgekürzte Texte über rohes Getreide (1) ",
+  "sn56.65:0.3": "65. Im Wasser geboren "
 }
