--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -696,6 +696,7 @@
   "sn-name:2068.sn56.62": "In Grenzgebieten ",
   "sn-name:2069.sn56.63": "Weisheit ",
   "sn-name:2070.sn56.64": "Alkohol trinken ",
+  "sn-name:2071.sn56.65": "Im Wasser geboren ",
   "sn-name:2077.sn56-dutiyaamakadhannapeyyalavagga": "Abgekürzte Texte über rohes Getreide (2) ",
   "sn-name:2078.sn56.71": "Lebende Geschöpfe töten ",
   "sn-name:2079.sn56.72": "Stehlen ",
