--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -327,7 +327,7 @@
   "mn1:172-194.25": "એ શેના માટે?",
   "mn1:172-194.26": "આનંદ માંણવાની વૃત્તી દુખનું મૂળ છે—",
   "mn1:172-194.27": "અને અસ્તિત્વના કારણે જન્મ થાય છે અને જે જન્મેલા છે તેમને વયવૃધ્ધિ અને મૃત્યુનો અનુભવ થાય છે.",
-  "mn1:172-194.28": "આ કારણે, ભક્ષુઓ, ‘લાલસાના સંપૂર્ણ વિનાશ, વૈરાગ્ય, નિરોધ, ત્યાગ, અને છોડી દેવાને લીધે, તથાગત સર્વશ્રેષ્ઠ પરમજ્ઞાન દ્વારા સંબોધિમાં જાણકાર થયા છે’, કહું છું”.",
+  "mn1:172-194.28": "આ કારણે, ભક્ષુઓ, ‘લાલસાના સંપૂર્ણ વિનાશ, વૈરાગ્ય, નિરોધ, ત્યાગ, અને વિસર્જનને લીધે, તથાગત સર્વશ્રેષ્ઠ પરમજ્ઞાન દ્વારા સંબોધિમાં જાણકાર થયા છે’, કહું છું”.",
   "mn1:172-194.29": "તથાગતની પૂર્ણતા",
   "mn1:172-194.30": "ભગવન્તે એવુ કહ્યું.",
   "mn1:172-194.31": "પણ એ ભિક્ષુઓને ભગવંતના શબ્દો ના ગમ્યા. ",
