--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -701,6 +701,7 @@
   "sn-name:2073.sn56.67": "Respekt vor dem Vater ",
   "sn-name:2074.sn56.68": "Respekt vor Asketen ",
   "sn-name:2075.sn56.69": "Respekt vor Brahmanen ",
+  "sn-name:2076.sn56.70": "Älteste ehren ",
   "sn-name:2077.sn56-dutiyaamakadhannapeyyalavagga": "Abgekürzte Texte über rohes Getreide (2) ",
   "sn-name:2078.sn56.71": "Lebende Geschöpfe töten ",
   "sn-name:2079.sn56.72": "Stehlen ",
