--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -292,7 +292,7 @@
   "mn1:148-170.23": "નિર્વાણને પ્રત્યક્ષ રીતે નિર્વાણ તરીકે જાણે છે;",
   "mn1:148-170.24": "પરંતુ નિર્વાણને પ્રત્યક્ષ રીતે નિર્વાણ તરીકે જાણી તેઓ પોતાને નિર્વાણ નથી માનતા, પોતાને નિર્વાણમાં નથી માનતા, પોતાને નિર્વાણથી નથી માનતા, નિર્વાણ મારું છે એવું નથી માનતા, નિર્વાણમાં આનંદ નથી લેતા.",
   "mn1:148-170.25": "એ શેના માટે?",
-  "mn1:148-170.26": "એમને સંપૂર્ણ઼પણે અંત સુધી સમજ઼ાયુ છે એટલે, કહું છું.",
+  "mn1:148-170.26": "’એમને સંપૂર્ણ઼પણે અંત સુધી સમજ઼ાયુ છે એટલે’, કહું છું.",
   "mn1:148-170.27": "તથાગતની પૂર્ણતા",
   "mn1:171.1": "અરહંત, સમ્મસંબુધ્ધ, તથાગત પણ પૃથ્વીને પ્રત્યક્ષ રીતે પૃથ્વી તરીકે જાણતા હોય છે;",
   "mn1:171.2": "પરંતુ પૃથ્વીને પ્રત્યક્ષ રીતે પૃથ્વી તરીકે જાણી તેઓ પોતાને પૃથ્વી નથી માનતા, પોતાને પૃથ્વીમાં નથી માનતા, પોતાને પૃથ્વીથી નથી માનતા, પૃથ્વી મારી છે એવું નથી માનતા, પૃથ્વીમાં આનંદ નથી લેતા.",
