--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -204,7 +204,7 @@
   "mn1:99.1": "ભિક્ષુઓ, જે ભિક્ષુ અશુધ્ધિઓના અંત દ્વારા અ૨હંત થયા છે, જેમણે ધાર્મિક જીવન જીવ્યું છે, જે કરવાનુ હતું તે કર્યું છે, બોજ઼ મૂકી દીધો છે, પોતાનો ધ્યેય સિધ્ધ કર્યો છે, અસ્તિત્વના બંધનનો સંપૂર્ણપણે વિનાશ કર્યો છે, જે સમ્મજ્ઞાન દ્વારા સંપૂર્ણપણે મુક્ત થયા છે તેઓ પણ પ્રત્યક્ષ રીતે પૃથ્વીને પૃથ્વી તરીકે જાણતા હોય છે;",
   "mn1:99.2": "પરંતુ પૃથ્વીને પ્રત્યક્ષ રીતે પૃથ્વી તરીકે જાણી તેઓ પોતાને પૃથ્વી નથી માનતા, પોતાને પૃથ્વીમાં નથી માનતા, પોતાને પૃથ્વીથી નથી માનતા, પૃથ્વી મારી છે એવું નથી માનતા, પૃથ્વીમાં આનંદ નથી લેતા.",
   "mn1:99.3": "એ શેના માટે?",
-  "mn1:99.4": "કારણકે તેઓ દ્વેષના અંતને લીધે દ્વેષથી મુક્ત છે.",
+  "mn1:99.4": "કારણકે તેઓ દ્વેષના વિનાશને લીધે દ્વેષથી મુક્ત છે.",
   "mn1:100-122.1": "પાણીને પાણી …",
   "mn1:100-122.2": "અગ્નીને અગ્ની …",
   "mn1:100-122.3": "વાયુને વાયુ …",
