--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -137,7 +137,7 @@
   "mn1:28-49.23": "નિર્વાણને નિર્વાણ તરીકે સરખી રીતે જાણે છે;",
   "mn1:50.1": "પરંતુ નિર્વાણને નિર્વાણ જાણી એમણે પોતાને નિર્વાણ ના માનવું જોઇએ, પોતાને નિર્વાણમાં ના માનવું જોઈએ, પોતાને નિર્વાણથી ના માનવું જોઇએ, નિર્વાણ મારું છે એવું ના માનવું જોઇએ, નિર્વાણમાં આનંદ ના લેવો જોઇએ.",
   "mn1:50.2": "એ શેના માટે?",
-  "mn1:50.3": "એમને સંપૂર્ણ઼પણે સમજ઼ાય એના માટે, કહું છું.",
+  "mn1:50.3": "‘એમને સંપૂર્ણ઼પણે સમજ઼ાય એના માટે’, કહું છું.",
   "mn1:50.4": " અરહંત ",
   "mn1:51.1": "ભિક્ષુઓ, જે ભિક્ષુ અશુધ્ધિઓના અંત દ્વારા અ૨હંત થયા છે, જેમણે ધાર્મિક જીવન જીવ્યું છે, જે કરવાનુ હતું તે કર્યું છે, બોજ઼ મૂકી દીધો છે, પોતાનો ધ્યેય સિધ્ધ કર્યો છે, અસ્તિત્વના બંધનનો સંપૂર્ણપણે વિનાશ કર્યો છે, જે સમ્મજ્ઞાન દ્વારા સંપૂર્ણપણે મુક્ત થયા છે તેઓ પણ પ્રત્યક્ષ રીતે પૃથ્વીને પૃથ્વી તરીકે જાણતા હોય છે;",
   "mn1:51.2": "પરંતુ પૃથ્વીને પૃથ્વી તરીકે જાણી તેઓ પોતાને પૃથ્વી નથી માનતા, પોતાને પૃથ્વીમાં નથી માનતા, પોતાને પૃથ્વીથી નથી માનતા, પૃથ્વી મારી છે એવું નથી માનતા, પૃથ્વીમાં આનંદ નથી લેતા.",
