--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -111,7 +111,7 @@
   "mn1:27.1": "ભિક્ષુઓ, જે ભિક્ષુ શિક્ષાર્થી હોય છે, જેણે ધ્યેય પરિપૂર્ણ નથી કર્યો પણ જેને બંધનથી મુક્તીના સર્વશ્રેષ્ઠ આશ્રયની આકાંશા હોય છે એ પણ પ્રત્યક્ષ રીતે પૃથ્વીને પૃથ્વી તરીકે જાણે છે; ",
   "mn1:27.2": "પરંતુ પૃથ્વીને પૃથ્વી તરીકે જાણી એમણે પોતાને પૃથ્વી ના માનવું જોઇએ, પોતાને પૃથ્વીમાં ના માનવું જોઇએ, પોતાને પૃથ્વીથી ના માનવું જોઇએ, પૃથ્વી મારી છે એવું ના માનવું જોઇએ, પૃથ્વીમાં આનંદ ના લેવો જોઇએ.",
   "mn1:27.3": "એ શેના માટે?",
-  "mn1:27.4": "એમને સંપૂર્ણ઼પણે સમજ઼ાય એના માટે, કહું છું.",
+  "mn1:27.4": "‘એમને સંપૂર્ણ઼પણે સમજ઼ાય એના માટે’, કહું છું.",
   "mn1:28-49.1": "પાણીને પાણી …",
   "mn1:28-49.2": "અગ્નીને અગ્ની …",
   "mn1:28-49.3": "વાયુને વાયુ …",
