--- a/translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json
@@ -141,7 +141,7 @@
   "dn23:10.3": "„Kannst du das beweisen?“ ",
   "dn23:10.4": "„Das kann ich.“ ",
   "dn23:10.5": "„Und wie genau, Stammesfürst?“ ",
-  "dn23:10.6": "„Nun, ich habe Freunde und Kollegen, Verwandte und Sippenangehörige, die keine lebenden Geschöpfe töten usw. ",
+  "dn23:10.6": "„Nun, ich habe Freunde und Kollegen, Verwandte und Sippenangehörige, die das Töten lebender Geschöpfe usw. unterlassen. ",
   "dn23:10.7": "Nach einiger Zeit sind sie mitgenommen, leidend, schwer krank. ",
   "dn23:10.8": "Wenn ich weiß, ",
   "dn23:10.9": "dass sie sich von ihrer Krankheit nicht erholen werden, gehe ich zu ihnen und sage: ",
