--- a/translation/de/sabbamitta/sutta/kn/kp/kp2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/kp/kp2_translation-de-sabbamitta.json
@@ -2,7 +2,7 @@
   "kp2:0.1": "Grundlegende Ausschnitte ",
   "kp2:0.2": "Die zehn Schulungsregeln ",
   "kp2:1.1": "Ich nehme mir die Schulungsregel vor, das Töten lebender Geschöpfe zu unterlassen. ",
-  "kp2:2.1": "Ich nehme mir die Schulungsregel vor, nicht zu stehlen. ",
+  "kp2:2.1": "Ich nehme mir die Schulungsregel vor, das Stehlen zu unterlassen. ",
   "kp2:3.1": "Ich nehme mir die Schulungsregel vor, keinen Geschlechtsverkehr zu haben. ",
   "kp2:4.1": "Ich nehme mir die Schulungsregel vor, nicht zu lügen. ",
   "kp2:5.1": "Ich nehme mir die Schulungsregel vor, keinen Alkohol zu trinken, der nachlässig macht. ",
