--- a/translation/de/sabbamitta/sutta/kn/kp/kp2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/kp/kp2_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "kp2:1.1": "Ich nehme mir die Schulungsregel vor, das Töten lebender Geschöpfe zu unterlassen. ",
   "kp2:2.1": "Ich nehme mir die Schulungsregel vor, das Stehlen zu unterlassen. ",
   "kp2:3.1": "Ich nehme mir die Schulungsregel vor, Geschlechtsverkehr zu unterlassen. ",
-  "kp2:4.1": "Ich nehme mir die Schulungsregel vor, nicht zu lügen. ",
+  "kp2:4.1": "Ich nehme mir die Schulungsregel vor, das Lügen zu unterlassen. ",
   "kp2:5.1": "Ich nehme mir die Schulungsregel vor, keinen Alkohol zu trinken, der nachlässig macht. ",
   "kp2:6.1": "Ich nehme mir die Schulungsregel vor, nicht zur falschen Zeit zu essen. ",
   "kp2:7.1": "Ich nehme mir die Schulungsregel vor, Tanz, Gesang, Musik und den Besuch von Shows zu meiden. ",
