--- a/translation/de/sabbamitta/sutta/kn/kp/kp2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/kp/kp2_translation-de-sabbamitta.json
@@ -6,7 +6,7 @@
   "kp2:3.1": "Ich nehme mir die Schulungsregel vor, Geschlechtsverkehr zu unterlassen. ",
   "kp2:4.1": "Ich nehme mir die Schulungsregel vor, das Lügen zu unterlassen. ",
   "kp2:5.1": "Ich nehme mir die Schulungsregel vor, das Trinken von Alkohol, der nachlässig macht, zu unterlassen. ",
-  "kp2:6.1": "Ich nehme mir die Schulungsregel vor, nicht zur falschen Zeit zu essen. ",
+  "kp2:6.1": "Ich nehme mir die Schulungsregel vor, das Essen zur falschen Zeit zu unterlassen. ",
   "kp2:7.1": "Ich nehme mir die Schulungsregel vor, Tanz, Gesang, Musik und den Besuch von Shows zu meiden. ",
   "kp2:8.1": "Ich nehme mir die Schulungsregel vor, mich nicht mit Kränzen, Parfüm und Make-up zu verschönern und zu schmücken. ",
   "kp2:9.1": "Ich nehme mir die Schulungsregel vor, keine hohen und üppigen Betten zu benutzen. ",
