--- a/translation/de/sabbamitta/sutta/kn/kp/kp2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/kp/kp2_translation-de-sabbamitta.json
@@ -9,6 +9,6 @@
   "kp2:6.1": "Ich nehme mir die Schulungsregel vor, das Essen zur falschen Zeit zu unterlassen. ",
   "kp2:7.1": "Ich nehme mir die Schulungsregel vor, Tanz, Gesang, Musik und den Besuch von Shows zu unterlassen. ",
   "kp2:8.1": "Ich nehme mir die Schulungsregel vor, es zu unterlassen, mich mit Kränzen, Parfüm und Make-up zu verschönern und zu schmücken. ",
-  "kp2:9.1": "Ich nehme mir die Schulungsregel vor, keine hohen und üppigen Betten zu benutzen. ",
+  "kp2:9.1": "Ich nehme mir die Schulungsregel vor, den Gebrauch hoher und üppiger Betten zu unterlassen. ",
   "kp2:10.1": "Ich nehme mir die Schulungsregel vor, kein Gold oder Geld anzunehmen. "
 }
