--- a/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
@@ -42,7 +42,7 @@
   "an4.198:7.4": "Er hat diese Welt – die Welt mit ihren Göttern, Māras und Brahmās, mit dieser Bevölkerung mit ihren Asketen und Brahmanen, Göttern und Menschen – durch eigene Einsicht erkannt und erklärt sie anderen. ",
   "an4.198:7.5": "Er lehrt den Dhamma, der am Anfang gut, in der Mitte gut und am Ende gut ist, bedeutsam und gut ausgedrückt. Und er legt eine geistliche Übung dar, die in sich geschlossen und rein ist. ",
   "an4.198:7.6": "Ein Hausbesitzer hört diese Lehre, oder das Kind eines Hausbesitzers oder jemand, der in einer guten Familie wiedergeboren ist. ",
-  "an4.198:7.7": "Die Person fasst Vertrauen zum Klargewordenen ",
+  "an4.198:7.7": "Dieser Mensch fasst Vertrauen zum Klargewordenen ",
   "an4.198:7.8": "und überlegt: ",
   "an4.198:7.9": "‚Das Leben in einem Haus ist eng und schmutzig, aber das Leben von jemand, der fortgezogen ist, ist weit offen. ",
   "an4.198:7.10": "Es ist nicht einfach, wenn man im Haus lebt, das geistliche Leben ganz vollständig und rein zu führen wie die blank gescheuerte Schale einer Meeresschnecke. ",
