--- a/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
@@ -49,7 +49,7 @@
   "an4.198:7.11": "Warum rasiere ich mir nicht Haar und Bart, lege ockerfarbene Roben an und ziehe aus dem Haus fort ins hauslose Leben?‘ ",
   "an4.198:7.12": "Nach einiger Zeit gibt er ein großes oder kleines Vermögen auf, verlässt einen großen oder kleinen Familienkreis. Er rasiert sich Haar und Bart, legt ockerfarbene Roben an und zieht aus dem Haus fort ins hauslose Leben. ",
   "an4.198:8.1": "Wenn er fortgezogen ist, nimmt er die Schulung und die Lebensweise der Mönche und Nonnen auf. Er unterlässt das Töten lebender Geschöpfe und verzichtet auf Stock und Schwert. Er ist gewissenhaft und gütig und lebt voller Anteilnahme für alle Lebewesen. ",
-  "an4.198:8.2": "Sie unterlässt das Stehlen. Sie nimmt nur, was gegeben wird, erwartet nur, was gegeben wird. Sie ist nicht diebisch und ist innerlich rein. ",
+  "an4.198:8.2": "Er unterlässt das Stehlen. Er nimmt nur, was gegeben wird, erwartet nur, was gegeben wird. Er ist nicht diebisch und ist innerlich rein. ",
   "an4.198:8.3": "Sie unterlässt unkeusches Verhalten. Sie ist enthaltsam und abgesondert und vermeidet die übliche Praxis des Geschlechtsverkehrs. ",
   "an4.198:8.4": "Sie unterlässt das Lügen. Sie sagt die Wahrheit und hält sich an die Wahrheit. Sie ist ehrlich und vertrauenswürdig und legt die Welt nicht mit ihren Worten herein. ",
   "an4.198:8.5": "Sie unterlässt entzweiende Rede. Was sie hier gehört hat, sagt sie nicht dort, und was sie dort gehört hat, nicht hier, um Menschen zu entzweien. Stattdessen versöhnt sie die Uneinigen, fördert Einigkeit, freut sich an Eintracht, liebt die Eintracht und spricht Worte, die Eintracht fördern. ",
