Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
@@ -51,7 +51,7 @@
   "an4.198:8.1": "Wenn er fortgezogen ist, nimmt er die Schulung und die Lebensweise der Mönche und Nonnen auf. Er unterlässt das Töten lebender Geschöpfe und verzichtet auf Stock und Schwert. Er ist gewissenhaft und gütig und lebt voller Anteilnahme für alle Lebewesen. ",
   "an4.198:8.2": "Er unterlässt das Stehlen. Er nimmt nur, was gegeben wird, erwartet nur, was gegeben wird. Er ist nicht diebisch und ist innerlich rein. ",
   "an4.198:8.3": "Er unterlässt unkeusches Verhalten. Er ist enthaltsam und abgesondert und vermeidet die übliche Praxis des Geschlechtsverkehrs. ",
-  "an4.198:8.4": "Sie unterlässt das Lügen. Sie sagt die Wahrheit und hält sich an die Wahrheit. Sie ist ehrlich und vertrauenswürdig und legt die Welt nicht mit ihren Worten herein. ",
+  "an4.198:8.4": "Er unterlässt das Lügen. er sagt die Wahrheit und hält sich an die Wahrheit. Er ist ehrlich und vertrauenswürdig und legt die Welt nicht mit seinen Worten herein. ",
   "an4.198:8.5": "Sie unterlässt entzweiende Rede. Was sie hier gehört hat, sagt sie nicht dort, und was sie dort gehört hat, nicht hier, um Menschen zu entzweien. Stattdessen versöhnt sie die Uneinigen, fördert Einigkeit, freut sich an Eintracht, liebt die Eintracht und spricht Worte, die Eintracht fördern. ",
   "an4.198:8.6": "Sie unterlässt harte Rede. Ihre Worte sind mild, dem Ohr gefällig, lieblich, zu Herzen gehend, höflich, den Menschen lieb und angenehm. ",
   "an4.198:8.7": "Sie unterlässt sinnlose Rede. Ihre Worte kommen zur rechten Zeit, sind wahr, bedeutsam, im Einklang mit der Lehre und Schulung. Zur rechten Zeit sagt sie Dinge, die sinnvoll und begründet sind, treffend und nutzbringend. ",
