--- a/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
@@ -57,7 +57,7 @@
   "an4.198:8.7": "Er unterlässt sinnlose Rede. Seine Worte kommen zur rechten Zeit, sind wahr, bedeutsam, im Einklang mit der Lehre und Schulung. Zur rechten Zeit sagt er Dinge, die sinnvoll und begründet sind, treffend und nutzbringend. ",
   "an4.198:9.1": "Er unterlässt es, Pflanzen und Samen zu beschädigen. ",
   "an4.198:9.2": "Er isst zu einer Tageszeit und verzichtet auf das Essen bei Nacht und zur falschen Zeit. ",
-  "an4.198:9.3": "Sie meidet Tanz, Gesang, Musik und den Besuch von Shows. ",
+  "an4.198:9.3": "Er unterlässt Tanz, Gesang, Musik und den Besuch von Shows. ",
   "an4.198:9.4": "Sie vermeidet, sich mit Kränzen, Parfüm und Make-up zu verschönern und zu schmücken. ",
   "an4.198:9.5": "Sie unterlässt die Benutzung hoher und üppiger Betten. ",
   "an4.198:9.6": "Sie unterlässt es, Gold und Geld anzunehmen. ",
