--- a/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
@@ -59,7 +59,7 @@
   "an4.198:9.2": "Er isst zu einer Tageszeit und verzichtet auf das Essen bei Nacht und zur falschen Zeit. ",
   "an4.198:9.3": "Er unterlässt Tanz, Gesang, Musik und den Besuch von Shows. ",
   "an4.198:9.4": "Er unterlässt es, sich mit Kränzen, Parfüm und Make-up zu verschönern und zu schmücken. ",
-  "an4.198:9.5": "Sie unterlässt die Benutzung hoher und üppiger Betten. ",
+  "an4.198:9.5": "Er unterlässt die Benutzung hoher und üppiger Betten. ",
   "an4.198:9.6": "Sie unterlässt es, Gold und Geld anzunehmen. ",
   "an4.198:9.7": "Sie unterlässt es, rohes Getreide anzunehmen, ",
   "an4.198:9.8": "rohes Fleisch, ",
