Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
@@ -69,7 +69,7 @@
   "an4.198:9.12": "Hühner und Schweine, ",
   "an4.198:9.13": "Elefanten, Rinder, Pferde und Stuten ",
   "an4.198:9.14": "sowie Äcker und Land. ",
-  "an4.198:9.15": "Sie unterlässt es, Botengänge zu machen und Botschaften zu übermitteln, ",
+  "an4.198:9.15": "Er unterlässt es, Botengänge zu machen und Botschaften zu übermitteln, ",
   "an4.198:9.16": "zu kaufen und zu verkaufen. ",
   "an4.198:9.17": "Sie unterlässt das Fälschen von Maßen, Metallen oder Gewichten ",
   "an4.198:9.18": "sowie Bestechung, Betrug, Täuschung und Falschheit. ",
