Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
@@ -71,7 +71,7 @@
   "an4.198:9.14": "sowie Äcker und Land. ",
   "an4.198:9.15": "Er unterlässt es, Botengänge zu machen und Botschaften zu übermitteln, ",
   "an4.198:9.16": "zu kaufen und zu verkaufen. ",
-  "an4.198:9.17": "Sie unterlässt das Fälschen von Maßen, Metallen oder Gewichten ",
+  "an4.198:9.17": "Er unterlässt das Fälschen von Maßen, Metallen oder Gewichten ",
   "an4.198:9.18": "sowie Bestechung, Betrug, Täuschung und Falschheit. ",
   "an4.198:9.19": "Sie unterlässt Verstümmelung, Mord, Entführung, Räuberei, Plünderung und Gewalt. ",
   "an4.198:10.1": "Sie ist zufrieden mit Roben, die den Körper einhüllen, und Almosen, das den Bauch füllt. Wohin sie geht, da hat sie nur diese Dinge dabei. ",
