--- a/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
@@ -74,7 +74,7 @@
   "an4.198:9.17": "Er unterlässt das Fälschen von Maßen, Metallen oder Gewichten ",
   "an4.198:9.18": "sowie Bestechung, Betrug, Täuschung und Falschheit. ",
   "an4.198:9.19": "Er unterlässt Verstümmelung, Mord, Entführung, Räuberei, Plünderung und Gewalt. ",
-  "an4.198:10.1": "Sie ist zufrieden mit Roben, die den Körper einhüllen, und Almosen, das den Bauch füllt. Wohin sie geht, da hat sie nur diese Dinge dabei. ",
+  "an4.198:10.1": "Er ist zufrieden mit Roben, die den Körper einhüllen, und Almosen, das den Bauch füllt. Wohin er geht, da hat er nur diese Dinge dabei. ",
   "an4.198:10.2": "Wie ein Vogel: Wohin er fliegt, da hat er nur seine Flügel dabei. ",
   "an4.198:10.3": "Ebenso ist ein Mönch oder eine Nonne zufrieden mit Roben, die den Körper einhüllen, und Almosen, das den Bauch füllt. Wohin diese Person geht, da hat sie nur diese Dinge dabei. ",
   "an4.198:10.4": "Wenn sie diesen ganzen Umfang der edlen Sittlichkeit besitzt, erfährt sie im Innern ein Glück, das ohne Tadel ist. ",
