--- a/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
@@ -77,7 +77,7 @@
   "an4.198:10.1": "Er ist zufrieden mit Roben, die den Körper einhüllen, und Almosen, das den Bauch füllt. Wohin er geht, da hat er nur diese Dinge dabei. ",
   "an4.198:10.2": "Wie ein Vogel: Wohin er fliegt, da hat er nur seine Flügel dabei. ",
   "an4.198:10.3": "Ebenso ist ein Mönch zufrieden mit Roben, die den Körper einhüllen, und Almosen, das den Bauch füllt. Wohin er geht, da hat er nur diese Dinge dabei. ",
-  "an4.198:10.4": "Wenn sie diesen ganzen Umfang der edlen Sittlichkeit besitzt, erfährt sie im Innern ein Glück, das ohne Tadel ist. ",
+  "an4.198:10.4": "Wenn er diesen ganzen Umfang der edlen Sittlichkeit besitzt, erfährt er im Innern ein Glück, das ohne Tadel ist. ",
   "an4.198:11.1": "Wenn sie mit dem Auge ein Bild sieht, bleibt sie nicht an den Merkmalen und Einzelheiten hängen. ",
   "an4.198:11.2": "Wenn das Sehvermögen nicht gezügelt wäre, würden schlechte, untaugliche Eigenschaften von Verlangen und Abneigung überhandnehmen. Aus diesem Grund übt sie Zügelung, bewacht das Sehvermögen und hält es im Zaum. ",
   "an4.198:11.3": "Wenn sie mit dem Ohr einen Ton hört … ",
