--- a/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
@@ -80,7 +80,7 @@
   "an4.198:10.4": "Wenn er diesen ganzen Umfang der edlen Sittlichkeit besitzt, erfährt er im Innern ein Glück, das ohne Tadel ist. ",
   "an4.198:11.1": "Wenn er mit dem Auge ein Bild sieht, bleibt er nicht an den Merkmalen und Einzelheiten hängen. ",
   "an4.198:11.2": "Wenn das Sehvermögen nicht gezügelt wäre, würden schlechte, untaugliche Eigenschaften von Verlangen und Abneigung überhandnehmen. Aus diesem Grund übt er Zügelung, bewacht das Sehvermögen und hält es im Zaum. ",
-  "an4.198:11.3": "Wenn sie mit dem Ohr einen Ton hört … ",
+  "an4.198:11.3": "Wenn er mit dem Ohr einen Ton hört … ",
   "an4.198:11.4": "Wenn sie mit der Nase einen Duft riecht … ",
   "an4.198:11.5": "Wenn sie mit der Zunge einen Geschmack schmeckt … ",
   "an4.198:11.6": "Wenn sie mit dem Körper eine Berührung empfindet … ",
