Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
@@ -94,7 +94,7 @@
   "an4.198:13.4": "Er gibt das Verlangen nach der Welt auf, meditiert mit einem Herzen, das frei von Verlangen ist, und läutert den Geist von Verlangen. ",
   "an4.198:13.5": "Er gibt bösen Willen und Niedertracht auf, meditiert mit einem Herzen, das frei von bösem Willen ist, voller Anteilnahme für alle Lebewesen, und läutert den Geist von bösem Willen. ",
   "an4.198:13.6": "Er gibt Dumpfheit und Benommenheit auf, meditiert mit einem Herzen, das frei von Dumpfheit und Benommenheit ist, er nimmt Licht wahr, ist achtsam und umsichtig und läutert den Geist von Dumpfheit und Benommenheit. ",
-  "an4.198:13.7": "Sie gibt Rastlosigkeit und Reue auf, meditiert ohne Rastlosigkeit, mit innerlich friedvollem Geist, und läutert den Geist von Rastlosigkeit und Reue. ",
+  "an4.198:13.7": "Er gibt Rastlosigkeit und Reue auf, meditiert ohne Rastlosigkeit, mit innerlich friedvollem Geist, und läutert den Geist von Rastlosigkeit und Reue. ",
   "an4.198:13.8": "Sie gibt den Zweifel auf, meditiert, indem sie über den Zweifel hinausgegangen ist, nicht im Unklaren über taugliche Eigenschaften, und läutert den Geist von Zweifel. ",
   "an4.198:13.9": "Sie gibt diese fünf Hindernisse auf, die Verunreinigungen des Herzens, die die Weisheit schwächen. ",
   "an4.198:13.10": "Dann tritt sie, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung ein und verweilt darin … Sie tritt in die zweite Vertiefung ein … sie tritt in die dritte Vertiefung ein … sie tritt in die vierte Vertiefung ein und verweilt darin. ",
