Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -707,6 +707,7 @@
   "sn-name:2079.sn56.72": "Stehlen ",
   "sn-name:2080.sn56.73": "Sexuelle Verfehlungen ",
   "sn-name:2081.sn56.74": "Lügen ",
+  "sn-name:2082.sn56.75": "Entzweiende Rede ",
   "sn-name:2083.sn56.76": "Harte Rede ",
   "sn-name:2084.sn56.77": "Sinnlose Rede ",
   "sn-name:2088.sn56-tatiyaamakadhannapeyyalavagga": "Abgekürzte Texte über rohes Getreide ",
