Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn56/sn56.77_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.77_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.77_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn56.77:0.1": "Verbundene Lehrreden 56 ",
-  "sn56.77:0.2": "8. Abgekürzte Texte über rohes Getreide "
+  "sn56.77:0.2": "8. Abgekürzte Texte über rohes Getreide ",
+  "sn56.77:0.3": "77. Sinnlose Rede "
 }
