Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn56/sn56.78_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.78_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.78_translation-de-sabbamitta.json
@@ -1,3 +1,4 @@
 {
-  "sn56.78:0.1": "Verbundene Lehrreden 56 "
+  "sn56.78:0.1": "Verbundene Lehrreden 56 ",
+  "sn56.78:0.2": "8. Abgekürzte Texte über rohes Getreide "
 }
