Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -710,6 +710,7 @@
   "sn-name:2082.sn56.75": "Entzweiende Rede ",
   "sn-name:2083.sn56.76": "Harte Rede ",
   "sn-name:2084.sn56.77": "Sinnlose Rede ",
+  "sn-name:2085.sn56.78": "Pflanzen ",
   "sn-name:2088.sn56-tatiyaamakadhannapeyyalavagga": "Abgekürzte Texte über rohes Getreide ",
   "sn-name:2099.sn56-catutthaamakadhannapeyyalavagga": "Abgekürzte Texte über rohes Getreide ",
   "sn-name:2106.sn56-pancagatipeyyalavagga": "Abgekürzte Texte über fünf Bestimmungsorte "
