Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -715,6 +715,7 @@
   "sn-name:2087.sn56.80": "Parfüm und Make-up ",
   "sn-name:2088.sn56-tatiyaamakadhannapeyyalavagga": "Abgekürzte Texte über rohes Getreide ",
   "sn-name:2089.sn56.81": "Tanz und Gesang ",
+  "sn-name:2090.sn56.82": "Hohe Betten ",
   "sn-name:2099.sn56-catutthaamakadhannapeyyalavagga": "Abgekürzte Texte über rohes Getreide ",
   "sn-name:2106.sn56-pancagatipeyyalavagga": "Abgekürzte Texte über fünf Bestimmungsorte "
 }
