Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -153,7 +153,7 @@
   "dn34:1.5.29": "What are the four things that are hard to penetrate?",
   "dn34:1.5.30": "The four collectednesses—",
   "dn34:1.5.31": "Collectedness that leads to backsliding; collectedness that leads to stability; collectedness that leads to accomplishment; collectedness that leads to penetration.",
-  "dn34:1.5.32": "These are the four things that are hard to penetrate?",
+  "dn34:1.5.32": "These are the four things that are hard to penetrate.",
   "dn34:1.5.33": "What are the four things that are to be encouraged?",
   "dn34:1.5.34": "The four knowledges—",
   "dn34:1.5.35": "Knowledge regarding Dhamma; knowledge in conformity; knowledge in fathoming; knowledge regarding the final boundary.",
