Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -126,7 +126,7 @@
   "dn34:1.5.2": "What are the four things that are of great help?",
   "dn34:1.5.3": "The four wheels—",
   "dn34:1.5.4": "Living in befitting places; having support from people of integrity; right personal aspiration; and previous meritoriousness.",
-  "dn34:1.5.5": "These are the four things that are of great help?",
+  "dn34:1.5.5": "These are the four things that are of great help.",
   "dn34:1.5.6": "What are the four things that are to be cultivated?",
   "dn34:1.5.7": "The four cornerstones of mindfulness—",
   "dn34:1.5.8": "Here, a monk dwells paying attention to the body in the body—fervent, integrally aware, and mindful—clearing away obsessiveness and dejection regarding the world.",
