Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -157,7 +157,7 @@
   "dn34:1.5.33": "What are the four things that are to be encouraged?",
   "dn34:1.5.34": "The four knowledges—",
   "dn34:1.5.35": "Knowledge regarding Dhamma; knowledge in conformity; knowledge in fathoming; knowledge regarding the final boundary.",
-  "dn34:1.5.36": "These are the four things that are to be encouraged?",
+  "dn34:1.5.36": "These are the four things that are to be encouraged.",
   "dn34:1.5.37": "What are the four things that are to be understood fully?",
   "dn34:1.5.38": "The four Noble Truths—",
   "dn34:1.5.39": "The Noble Truth of suffering; the Noble Truth of the origin of suffering; the Noble Truth of the end of suffering; the Noble Truth that is the path that goes to the end of suffering.",
