Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -141,7 +141,7 @@
   "dn34:1.5.17": "What are the four things that are to be abandoned?",
   "dn34:1.5.18": "The four floods—",
   "dn34:1.5.19": "The flood of sensuality; the flood of becoming; the flood of views; the flood of ignorance.",
-  "dn34:1.5.20": "These are the four things that are to be abandoned?",
+  "dn34:1.5.20": "These are the four things that are to be abandoned.",
   "dn34:1.5.21": "What are the four things that lead to backsliding?",
   "dn34:1.5.22": "The four collars—",
   "dn34:1.5.23": "The collar of sensuality; the collar of becoming; the collar of views; the collar of ignorance.",
