Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -137,7 +137,7 @@
   "dn34:1.5.13": "What are the four things that are to be understood accurately?",
   "dn34:1.5.14": "The four nutriments—",
   "dn34:1.5.15": "Caloric nutriment whether substantial or subtle; contact as the second; mental intention as third; consciousness as fourth.",
-  "dn34:1.5.16": "These are the four things that are to be understood accurately?",
+  "dn34:1.5.16": "These are the four things that are to be understood accurately.",
   "dn34:1.5.17": "What are the four things that are to be abandoned?",
   "dn34:1.5.18": "The four floods—",
   "dn34:1.5.19": "The flood of sensuality; the flood of becoming; the flood of views; the flood of ignorance.",
