Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -165,7 +165,7 @@
   "dn34:1.5.41": "What are the four things that are to be seen for oneself?",
   "dn34:1.5.42": "The four fruits of recluseship—",
   "dn34:1.5.43": "The fruit of stream-entry; the fruit of once-returning; the fruit of non-returning; the fruit of arahantship.",
-  "dn34:1.5.44": "These are the four things that are to be seen for oneself?",
+  "dn34:1.5.44": "These are the four things that are to be seen for oneself.",
   "dn34:1.5.45": "These forty things which have been rightly and fully enlightened to thus by the Such-Attained One are true, real, just so, not false, and not otherwise.",
   "dn34:1.6.0": "5. Fives",
   "dn34:1.6.1": "There are five things that are of great help; five things that are to be cultivated; five things that are to be understood accurately; five things that are to be abandoned; five things that lead to backsliding; five things that lead to accomplishment; five things that are hard to penetrate; five things that are to be encouraged; five things that are to be understood fully; five things that are to be seen for oneself.",
