Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -133,7 +133,7 @@
   "dn34:1.5.9": "Here, a monk dwells paying attention to feelings in feelings—fervent, integrally away, and mindful—clearing away obsessiveness and dejection regarding the world.",
   "dn34:1.5.10": "Here, a monk dwells paying attention to the mind in the mind—fervent, integrally away, and mindful—clearing away obsessiveness and dejection regarding the world.",
   "dn34:1.5.11": "Here, a monk dwells paying attention to mental states among mental states—fervent, integrally aware, and mindful—clearing away obsessiveness and dejection regarding the world.",
-  "dn34:1.5.12": "These are the four things that are to be cultivated?",
+  "dn34:1.5.12": "These are the four things that are to be cultivated.",
   "dn34:1.5.13": "What are the four things that are to be understood accurately?",
   "dn34:1.5.14": "The four nutriments—",
   "dn34:1.5.15": "Caloric nutriment whether substantial or subtle; contact as the second; mental intention as third; consciousness as fourth.",
