Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -242,7 +242,7 @@
   "dn34:1.6.72": "The first-hand knowledge arises: ‘This collectedness is associated with exceptional people.’",
   "dn34:1.6.73": "The first-hand knowledge arises: ‘This collectedness is peaceful, refined, gained through ready tranquility, attained through unification, and is not gotten through suppressed repressing of volitional action.’",
   "dn34:1.6.74": "The first-hand knowledge arises: ‘Mindfully, I ender this collectedness and mindfully, I emerge from it.’",
-  "dn34:1.6.75": "These are the five things that are to be encouraged?",
+  "dn34:1.6.75": "These are the five things that are to be encouraged.",
   "dn34:1.6.76": "What are the five things that are to be understood fully?",
   "dn34:1.6.77": "The five strategies for freedom—",
   "dn34:1.6.78": "Here, a teacher or a certain of one's fellows in the holy life in the place of a teacher teaches the Dhamma to a monk.",
