Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn56/sn56.85_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.85_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn56.85:0.1": "Verbundene Lehrreden 56 ",
-  "sn56.85:0.2": "9. Abgekürzte Texte über rohes Getreide "
+  "sn56.85:0.2": "9. Abgekürzte Texte über rohes Getreide ",
+  "sn56.85:0.3": "85. Rohes Fleisch "
 }
