Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -720,6 +720,7 @@
   "sn-name:2092.sn56.84": "Rohes Getreide ",
   "sn-name:2093.sn56.85": "Rohes Fleisch ",
   "sn-name:2094.sn56.86": "Frauen und Mädchen ",
+  "sn-name:2095.sn56.87": "Leibeigene ",
   "sn-name:2099.sn56-catutthaamakadhannapeyyalavagga": "Abgekürzte Texte über rohes Getreide ",
   "sn-name:2106.sn56-pancagatipeyyalavagga": "Abgekürzte Texte über fünf Bestimmungsorte "
 }
