Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -722,6 +722,7 @@
   "sn-name:2094.sn56.86": "Frauen und Mädchen ",
   "sn-name:2095.sn56.87": "Leibeigene ",
   "sn-name:2096.sn56.88": "Ziegen und Schafe ",
+  "sn-name:2097.sn56.89": "Hühner und Schweine ",
   "sn-name:2099.sn56-catutthaamakadhannapeyyalavagga": "Abgekürzte Texte über rohes Getreide ",
   "sn-name:2106.sn56-pancagatipeyyalavagga": "Abgekürzte Texte über fünf Bestimmungsorte "
 }
