Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn56/sn56.91_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.91_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.91_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn56.91:0.1": "Verbundene Lehrreden 56 ",
-  "sn56.91:0.2": "10. Abgekürzte Texte über rohes Getreide "
+  "sn56.91:0.2": "10. Abgekürzte Texte über rohes Getreide ",
+  "sn56.91:0.3": "91. Äcker und Land "
 }
