Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -726,5 +726,6 @@
   "sn-name:2098.sn56.90": "Elefanten und Rinder ",
   "sn-name:2099.sn56-catutthaamakadhannapeyyalavagga": "Abgekürzte Texte über rohes Getreide ",
   "sn-name:2100.sn56.91": "Äcker und Land ",
+  "sn-name:2101.sn56.92": "Kaufen und Verkaufen ",
   "sn-name:2106.sn56-pancagatipeyyalavagga": "Abgekürzte Texte über fünf Bestimmungsorte "
 }
