Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -729,5 +729,6 @@
   "sn-name:2101.sn56.92": "Kaufen und Verkaufen ",
   "sn-name:2102.sn56.93": "Botengänge ",
   "sn-name:2103.sn56.94": "Falsche Maße ",
+  "sn-name:2104.sn56.95": "Bestechung ",
   "sn-name:2106.sn56-pancagatipeyyalavagga": "Abgekürzte Texte über fünf Bestimmungsorte "
 }
