Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -730,5 +730,6 @@
   "sn-name:2102.sn56.93": "Botengänge ",
   "sn-name:2103.sn56.94": "Falsche Maße ",
   "sn-name:2104.sn56.95": "Bestechung ",
+  "sn-name:2105.sn56.96-101": "Verstümmelung usw. ",
   "sn-name:2106.sn56-pancagatipeyyalavagga": "Abgekürzte Texte über fünf Bestimmungsorte "
 }
