Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn56/sn56.104_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.104_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.104_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn56.104:0.1": "Verbundene Lehrreden 56 ",
-  "sn56.104:0.2": "11. Abgekürzte Texte über fünf Bestimmungsorte "
+  "sn56.104:0.2": "11. Abgekürzte Texte über fünf Bestimmungsorte ",
+  "sn56.104:0.3": "104. Als Menschen sterben und als Gespenster wiedergeboren werden "
 }
